# VPN-Mikro

./: README.md  build.py  create_icon.py  pyproject.toml  query  update.json  version.py  vpnmikro.manifest  vpnmikro.py
Docs/: BUILD.md  CHANGELOG.md  MIKROTIK_SETUP.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  UPDATE_SERVER.md  USER_GUIDE.md
assets/: theme.qss
licenses/: LICENSE-vpnmikro.txt  LICENSE-wireguard.txt  TERMS_OF_SERVICE.txt
vpnmikro/: elevated_main.py
vpnmikro/core/: __init__.py  device_manager.py  elevation.py  ip_allocator.py  logger.py  models.py  profiles.py  qr_generator.py  rate_limiter.py  secure_store.py  updater.py  wg_config.py  wg_controller_win.py
vpnmikro/mikrotik/: __init__.py  ros_client.py  wg_manager.py
vpnmikro/ui/: __init__.py  about_dialog.py  advanced_tab.py  app_settings_dialog.py  assets.py  connection_tab.py  dashboard.py  device_settings_dialog.py  devices_tab.py  export_dialog.py  import_dialog.py  main_window.py  manual_vpn_wizard.py  qr_dialog.py  settings_dialog.py  vpn_servers_tab.py  wizard.py
